Fix: correct toggle thumb stretch

--- a/styles.css
+++ b/styles.css
@@ -69,15 +69,6 @@ p {
   font-family: "Inter", sans-serif;
 }
 
-label {
-  font-size: var(--step-0);
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  line-height: 1.4;
-  color: var(--color-text-secondary);
-  user-select: none;
-}
-
 .title {
   font-size: var(--step-4);
   color: var(--color-text-primary);
@@ -98,6 +89,10 @@ label {
   margin-bottom: var(--space-l);
 }
 
+.separator {
+  border: 2px solid var(--color-separator);
+}
+
 .password-settings {
   display: flex;
   flex-direction: column;
@@ -114,17 +109,25 @@ label {
   gap: var(--space-2xs);
 }
 
+label {
+  font-size: var(--step-0);
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  line-height: 1.4;
+  color: var(--color-text-secondary);
+  user-select: none;
+}
+
 #length-value {
   color: var(--color-accent-green);
   font-weight: 700;
-  text-align: center;
 }
 
 /* Slider track */
 #length-slider {
+  /* Remove default styling */
   appearance: none;
   -webkit-appearance: none;
-  width: 100%;
   height: 8px;
   background-color: var(--color-bg-password);
   border-radius: 5px;
@@ -197,6 +200,7 @@ label {
 
 /* Toggle switch thumb */
 .toggle-input::before {
+  /* Neccesary to render the content */
   content: "";
   position: absolute;
   width: 18px;
@@ -235,6 +239,12 @@ label {
 
 /* Active state */
 .toggle-input:active::before {
+  left: 3px;
+  width: 22px;
+}
+
+.toggle-input:checked:active:before {
+  left: 19px;
   width: 22px;
 }
 
@@ -282,10 +292,6 @@ label {
 
 .btn-generate:active {
   transform: translateY(0) scale(0.9);
-}
-
-.separator {
-  border: 2px solid var(--color-separator);
 }
 
 .generated-passwords {
